minor color change

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ hr {
 	width: 70px;
 	text-align: center;
 	position: relative;
-	background: #6666ff;
+	background: #0066ff;
 	margin: 0;
 	margin-bottom: 40px;
 	border: 0;
@@ -168,7 +168,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 #menu a.navbar-brand {
 	font-family: 'Kaushan Script', cursive;
 	font-size: 36px;
-	color: #6666ff;
+	color: #0066ff;
 	font-weight: 700;
 	letter-spacing: 1px;
 }
@@ -191,15 +191,15 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	padding: 10px 0 !important;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #6666ff !important;
+	color: #0066ff !important;
 	background-color: transparent;
 }
 .navbar-toggle {
 	border-radius: 0;
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-	background-color: #6666ff;
-	border-color: #6666ff;
+	background-color: #0066ff;
+	border-color: #0066ff;
 }
 .navbar-default .navbar-toggle:hover>.icon-bar {
 	background-color: #FFF;
@@ -222,7 +222,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 .btn-custom {
 	text-transform: uppercase;
 	color: #fff;
-	background-color: #6666ff;
+	background-color: #0066ff;
 	border: 0;
 	padding: 14px 20px;
 	margin: 0;
@@ -235,7 +235,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 }
 .btn-custom:hover, .btn-custom:focus, .btn-custom.focus, .btn-custom:active, .btn-custom.active {
 	color: #fff;
-	background-color: #1b1661;
+	background-color: #003380;
 }
 /* Header Section */
 .intro {
@@ -397,11 +397,11 @@ ol.type li a {
 }
 ol.type li a.active {
 	color: #fff;
-	background-color: #6666ff;
+	background-color: #0066ff;
 }
 ol.type li a:hover {
 	color: #fff;
-	background-color: #6666ff;
+	background-color: #0066ff;
 }
 .isotope-item {
 	z-index: 2
@@ -537,7 +537,7 @@ ol.type li a:hover {
 #call-reservation {
 	padding: 50px 0;
 	color: #fff;
-	background: #6666ff; /* Old browsers */
+	background: #0066ff; /* Old browsers */
 	background: -moz-linear-gradient(top, rgb(0, 0, 179) 0%, rgb(0, 0, 100) 50%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top, rgba(0, 0, 179) 0%, rgba(0, 0, 100) 50%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to bottom, rgba(0, 0, 179) 0%, rgba(0, 0, 100) 50%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -649,7 +649,7 @@ color: #777;
 	padding: 50px 0 0 0;
 }
 #footer h3 {
-	color: #6666ff;
+	color: #0066ff;
 	font-weight: 400;
 	font-size: 18px;
 	text-transform: uppercase;
@@ -688,5 +688,5 @@ color: #777;
 	color: #f6f6f6;
 }
 #footer a:hover {
-	color: #333;
+	color: rgb(163, 163, 163);
 }
