minor style change

--- a/css/style.css
+++ b/css/style.css
@@ -496,7 +496,7 @@ ol.type li a:hover {
 	color: #fff;
 }
 #team hr {
-	background: rgb(255, 0, 0);
+	background: #0066ff;
 }
 #team h3 {
 	color: #fff;
